@@ -1,3 +1,9 @@
+2010-11-08  Luis Machado  <luisgpm@br.ibm.com>
+
+	* sysdeps/s390/dfpu/numdigits.h: Remove include guards.
+	* sysdeps/powerpc/dfpu/numdigits.h: Likewise.
+	* sysdeps/soft-dfp/dpd/numdigits.h: Likewise.
+
 2010-10-07  Ryan S. Arnold  <rsa@us.ibm.com>
 
 	* tests/test-printf.c (printf_d128s): Added 0.9999999999DL which
